Literally just a packet filter extension right now, it just grabs everything and shoves it in the console, doesn't do much anything (yet)

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,13 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+
+# Added by cargo
+
+/target
+
+# Dont leak your own packets!
+
+packets.db
+packets.db-journal
